--- a/code2statebkend-master/Dockerfile
+++ b/code2statebkend-master/Dockerfile
@@ -4,8 +4,9 @@ FROM openjdk:8u212-jdk-slim
 LABEL maintainer="savindi.narmada@gmail.com"
 # Add a volume pointing to /tmp
 VOLUME /tmp
+RUN mvn clean package
 # Make port 8080 available to the world outside this container
-EXPOSE 8080
+EXPOSE 9090
 # The application's jar file (when packaged)
 ARG JAR_FILE=target/codestatebkend-0.0.1-SNAPSHOT.jar
 # Add the application's jar to the container
