--- a/codestate-master/Dockerfile
+++ b/codestate-master/Dockerfile
@@ -7,6 +7,8 @@ LABEL maintainer="savindi.narmada@gmail.com"
 # Add a volume pointing to /tmp
 VOLUME /tmp
 
+RUN mvn clean package
+
 # Make port 8080 available to the world outside this container
 EXPOSE 8080
 
