--- a/code2statebkend-master/Dockerfile
+++ b/code2statebkend-master/Dockerfile
@@ -9,7 +9,7 @@ FROM openjdk:8u212-jdk-slim
 LABEL maintainer="savindi.narmada@gmail.com"
 # Add a volume pointing to /tmp
 VOLUME /tmp
-RUN mvn clean package
+#RUN mvn clean package
 # Make port 8080 available to the world outside this container
 EXPOSE 9090
 # The application's jar file (when packaged)
