--- a/codestatebackend/Dockerfile
+++ b/codestatebackend/Dockerfile
@@ -3,12 +3,16 @@ FROM openjdk:8u212-jdk-slim
 # Add Maintainer Info
 #LABEL maintainer="savindi.narmada@gmail.com"
 # Add a volume pointing to /tmp
-VOLUME /tmp
+#VOLUME /tmp
+ADD ./ app/
+WORKDIR /app
 # Make port 8080 available to the world outside this container
 EXPOSE 9090
 # The application's jar file (when packaged)
-ARG JAR_FILE=target/codestatebackend-0.0.1-SNAPSHOT.jar
+COPY --from=build /app/target/codestatebackend-0.0.1-SNAPSHOT.jar codestatebackend.jar
+#ARG JAR_FILE=target/codestatebackend-0.0.1-SNAPSHOT.jar
 # Add the application's jar to the container
-ADD ${JAR_FILE} codestatebackend.jar
+#ADD ${JAR_FILE} codestatebackend.jar
 # Run the jar file 
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/codestatebkend.jar"]
+#ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/codestatebackend.jar"]
+ENTRYPOINT ["java","-jar","codestatebackend.jar"]
